--- a/src/main/resources/com/tuncaysenturk/jira/plugins/jtp/tweet-post-function.properties
+++ b/src/main/resources/com/tuncaysenturk/jira/plugins/jtp/tweet-post-function.properties
@@ -1,17 +1,21 @@
 jtp.postfunction.description=You can define post function(s) in order to tweet from your Twitter account
-jtp.postfunction.title=Twitter Plugin for Jira - Tweet post function
+jtp.postfunction.title=Twitter Plugin for JIRA - Tweet post function
 jtp.postfunction.name=Tweet postfunction
 jtp.postfunction.tweetTemplate.label = Tweet Template 
 jtp.create-issue.footer = issue is created via Twitter by @{0}
 jtp.comment-issue.footer = comment is added via Twitter by @{0}
-jtp.configuration.link = Twitter Plugin for Jira - Configuration
+jtp.configuration.link = Twitter Plugin for JIRA - Configuration
 jtp.configuration.header = Configure your Twitter Plugin settings
+jtp.configuration.onlyFollowers.label = Only followers may create issues via Twitter
+jtp.configuration.onlyFollowers.desc = If checked, plugin will check whether the tweet owner is in the follower list. If they are not, they can not create issues.  
 jtp.configuration.project.label = Project
+jtp.configuration.project.desc = When a tweet arrives, an issue will be created within this project. 
 jtp.configuration.defaultReporter.label = User (issues will be created with this user)
+jtp.configuration.defaultReporter.desc = When a tweet arrives, this user will be the reporter of the newly created issue (as long as we do not have any relationship with JIRA user and Twitter account) 
 jtp.configuration.defaultIssueType.label = Issue Type (issues will be created with this type)
-jtp.configuration.menu.header = Twitter Plugin for Jira - Configuration
-jtp.configuration.userid.invalid = Please enter a valid Jira user
-jtp.configuration.projectId.invalid = Please enter a valid Jira project
+jtp.configuration.menu.header = Twitter Plugin for JIRA - Configuration
+jtp.configuration.userid.invalid = Please enter a valid JIRA user
+jtp.configuration.projectId.invalid = Please enter a valid JIRA project
 jtp.configuration.license.label = License status
 jtp.configuration.license.valid = Valid License
 jtp.configuration.license.invalid = Your license is invalid
@@ -19,19 +23,24 @@ jtp.configuration.consumerKey.label = Consumer Key
 jtp.configuration.consumerKey.blank = Please enter Twitter account's Consumer Key
 jtp.configuration.consumerSecret.label = Consumer Secret
 jtp.configuration.consumerSecret.blank = Please enter Twitter account's Consumer Secret
-jtp.configuration.accessToken.label = Access Token
-jtp.configuration.onlyFollowers.label = Only followers may create issues
-jtp.configuration.accessToken.blank = Please enter Twitter account's Access Token
-jtp.configuration.accessSecret.label = Access Secret
-jtp.configuration.accessSecret.blank = Please enter Twitter account's Access Secret
+jtp.configuration.requestToken.blank = You haven't logged in with Twitter yet
 jtp.configuration.listener.label = Twitter Plugin Status
-jtp.configuration.listening = Working
+jtp.configuration.listening = Running
 jtp.configuration.listeningButYouHaveLicenseProblem =   But you have got a license problem, twitter plugin will not work correctly
-jtp.configuration.notlistening = Not Working
-jtp.configuration.restartWorking = Restart Working
-jtp.configuration.stopWorking = Stop Working
+jtp.configuration.notlistening = Not Running
+jtp.configuration.restartWorking = Restart 
+jtp.configuration.stopWorking = Stop
 jtp.configuration.submit.caption = Submit
+jtp.configuration.twitter.submit.caption = Authorize application
 jtp.configuration.submit.caption.unpermitted=Sorry, you are not permitted to manage this configuration. Please log in as an administrator.
+jtp.configuration.twitter.login = Click to modify Twitter account settings
+jtp.configuration.twitter.header = Authorize your Twitter Account
+jtp.configuration.twitter.menu.header = Twitter Plugin for JIRA - Configuration
+jtp.configuration.twitter.screenname = You are logged in as @{0}
+jtp.configuration.twitter.noTwitterAccountLoggedIn = You haven't logged in with a Twitter account yet
+jtp.configuration.twitter.backToMainSettings = Back to main settings
+jtp.configuration.twitter.consumer.desc = Enter your Twitter account's OAuth settings.
+
 
 license-servlet.name=License Servlet
 license-servlet.description=The License Servlet Plugin
