Twitter for JIRA version 1.1.1
Signed-off-by: Tuncay Senturk <tuncay.senturk@gmail.com>

--- a/src/main/resources/com/tuncaysenturk/jira/plugins/jtp/tweet-post-function.properties
+++ b/src/main/resources/com/tuncaysenturk/jira/plugins/jtp/tweet-post-function.properties
@@ -7,10 +7,12 @@ jtp.comment-issue.footer = comment is added via Twitter by @{0}
 jtp.configuration.link = Twitter Plugin for JIRA - Configuration
 jtp.configuration.header = Configure your Twitter Plugin settings
 jtp.configuration.onlyFollowers.label = Only followers may create issues via Twitter
-jtp.configuration.onlyFollowers.desc = If checked, plugin will check whether the tweet owner is in the follower list. If they are not, they can not create issues.  
+jtp.configuration.onlyFollowers.desc = If checked, plugin will check whether the tweet owner is in the follower list. If they are not, they can not create issues.
+jtp.configuration.onlyFollowers.desc.2 = If you do not want anyone except your followers to create issues on your JIRA system, you have to check.    
 jtp.configuration.project.label = Project
-jtp.configuration.project.desc = When a tweet arrives, an issue will be created within this project. 
-jtp.configuration.defaultReporter.label = User (issues will be created with this user)
+jtp.configuration.project.desc = Select the JIRA project that plugin will create issues within this project whenever tweets arrive
+jtp.configuration.project.desc.2 = When a tweet arrives, an issue will be created within this project.  
+jtp.configuration.defaultReporter.label = Pick the JIRA user who will be the reporter of the issue 
 jtp.configuration.defaultReporter.desc = When a tweet arrives, this user will be the reporter of the newly created issue (as long as we do not have any relationship with JIRA user and Twitter account) 
 jtp.configuration.defaultIssueType.label = Issue Type (issues will be created with this type)
 jtp.configuration.menu.header = Twitter Plugin for JIRA - Configuration
@@ -34,13 +36,16 @@ jtp.configuration.submit.caption = Submit
 jtp.configuration.twitter.submit.caption = Authorize application
 jtp.configuration.submit.caption.unpermitted=Sorry, you are not permitted to manage this configuration. Please log in as an administrator.
 jtp.configuration.twitter.login = Click to modify Twitter account settings
+jtp.configuration.twitter.login.desc = Change Twitter account's credential settings. Besides, you may stop or start Twitter listener 
 jtp.configuration.twitter.header = Authorize your Twitter Account
 jtp.configuration.twitter.menu.header = Twitter Plugin for JIRA - Configuration
 jtp.configuration.twitter.screenname = You are logged in as @{0}
 jtp.configuration.twitter.noTwitterAccountLoggedIn = You haven't logged in with a Twitter account yet
 jtp.configuration.twitter.backToMainSettings = Back to main settings
-jtp.configuration.twitter.consumer.desc = Enter your Twitter account's OAuth settings.
-
+jtp.configuration.twitter.consumer.desc = You need to create a Twitter application (
+jtp.configuration.twitter.consumer.desc.2 =) and enter OAuth consumer key/secret pair in order to give authorization to the plugin.
+jtp.configuration.twitter.consumer.desc.3 = Click "Authorize application" button and you will be redirected to Twitter's page and prompted to authorize your Twitter account. 
+jtp.configuration.twitter.consumer.desc.4 = After authorizing, you will be redirected back to this page.
 
 license-servlet.name=License Servlet
 license-servlet.description=The License Servlet Plugin
