--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.tuncaysenturk.jira.plugins</groupId>
     <artifactId>jira-twitter-plugin</artifactId>
-    <version>1.3.0</version>
+    <version>1.4.0</version>
     <description>Twitter Plugin for JIRA, makes your company more social. Just configure with a Twitter account, then do your basic JIRA updates within Twitter, even though you do not have a VPN or direct connection to your company.</description>
-    <scm>
-    </scm>
+    <scm/>
     <organization>
         <name>Tuncay Senturk</name>
     </organization>
@@ -93,20 +92,20 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-			<groupId>org.twitter4j</groupId>
-			<artifactId>twitter4j-core</artifactId>
-			<version>2.2.6</version>
-			<exclusions>
-				<exclusion>
-					<groupId>com.googlecode</groupId>
-            		<artifactId>kryo</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-core</artifactId>
+            <version>3.0.5</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.googlecode</groupId>
+                    <artifactId>kryo</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
             <groupId>org.twitter4j</groupId>
             <artifactId>twitter4j-async</artifactId>
-            <version>2.2.6</version>
+            <version>3.0.5</version>
         </dependency>
         <dependency>
             <groupId>org.twitter4j</groupId>
@@ -114,31 +113,30 @@
             <version>2.2.6</version>
         </dependency>
         <dependency>
-		  	<groupId>com.atlassian.activeobjects</groupId>
-		  	<artifactId>activeobjects-plugin</artifactId>
-		  	<version>${ao.version}</version>
-		  	<scope>provided</scope>
-		</dependency>
-		
-		<dependency>
-		  	<groupId>com.atlassian.activeobjects</groupId>
-		  	<artifactId>activeobjects-test</artifactId>
-		  	<version>${ao.version}</version>
-		  	<scope>test</scope>
-		</dependency>
-		<dependency>
-		  	<groupId>hsqldb</groupId>
-		  	<artifactId>hsqldb</artifactId>
-		  	<version>1.8.0.10</version>
-		  	<scope>test</scope>
-		</dependency>
-		<dependency>
-		  	<groupId>org.slf4j</groupId>
-		  	<artifactId>slf4j-simple</artifactId>
-		  	<version>1.6.2</version>
-		  	<scope>test</scope>
-		</dependency>
-		<dependency>
+            <groupId>com.atlassian.activeobjects</groupId>
+            <artifactId>activeobjects-plugin</artifactId>
+            <version>${ao.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.atlassian.activeobjects</groupId>
+            <artifactId>activeobjects-test</artifactId>
+            <version>${ao.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>1.8.0.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.6.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8</version>
@@ -150,7 +148,6 @@
             <version>${jira.version}</version>
             <scope>test</scope>
         </dependency>
-        
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpg-jdk16</artifactId>
@@ -170,36 +167,32 @@
                 <version>${amps.version}</version>
                 <extensions>true</extensions>
                 <configuration>
-                	<enableFastdev>false</enableFastdev>
+                    <enableFastdev>false</enableFastdev>
                     <productVersion>${jira.version}</productVersion>
                     <productDataVersion>${jira.data.version}</productDataVersion>
                     <instructions>
                         <Private-Package>com.atlassian.upm.license.storage.lib*</Private-Package>
                         <Import-Package>com.atlassian.upm.api.license.entity;version="2.0.1", com.atlassian.upm.api.license;version="2.0.1", com.atlassian.upm.api.util;version="2.0.1", com.atlassian.upm.license.storage.plugin;version="${upm.license.compatibility.version}", !twitter4j.internal.http.alternative,!dalvik.system,!com.google.appengine.api.urlfetch,org.slf4j;version="1.5",*;resolution:=optional</Import-Package>
                     </instructions>
-                    
                     <pluginArtifacts>
-            			<pluginArtifact>
-            				<groupId>com.atlassian.activeobjects</groupId>
-            				<artifactId>activeobjects-plugin</artifactId>
-            				<version>${ao.version}</version>
-            			</pluginArtifact>
-            			<pluginArtifact>
-            				<groupId>com.atlassian.activeobjects</groupId>
-            				<artifactId>activeobjects-jira-spi</artifactId>
-            				<version>${ao.version}</version>
-            			</pluginArtifact>
-            		</pluginArtifacts>
-            		
-            		<pluginDependencies>
-			            <pluginDependency>
-			                <groupId>com.atlassian.upm</groupId>
-			                <artifactId>plugin-license-storage-plugin</artifactId>
-			            </pluginDependency>
-			        </pluginDependencies>
-            		
-            		<productVersion>${jira.version}</productVersion>
-                    
+                        <pluginArtifact>
+                            <groupId>com.atlassian.activeobjects</groupId>
+                            <artifactId>activeobjects-plugin</artifactId>
+                            <version>${ao.version}</version>
+                        </pluginArtifact>
+                        <pluginArtifact>
+                            <groupId>com.atlassian.activeobjects</groupId>
+                            <artifactId>activeobjects-jira-spi</artifactId>
+                            <version>${ao.version}</version>
+                        </pluginArtifact>
+                    </pluginArtifacts>
+                    <pluginDependencies>            
+                        <pluginDependency>                
+                            <groupId>com.atlassian.upm</groupId>                
+                            <artifactId>plugin-license-storage-plugin</artifactId>            
+                        </pluginDependency>        
+                    </pluginDependencies>
+                    <productVersion>${jira.version}</productVersion>
                     <bundledArtifacts>
                         <bundledArtifact>
                             <groupId>com.atlassian.upm</groupId>
@@ -212,7 +205,6 @@
                             <version>${upm.license.compatibility.version}</version>
                         </bundledArtifact>
                     </bundledArtifacts>
-                    
                 </configuration>
             </plugin>
             <plugin>
@@ -243,7 +235,7 @@
     </build>
     <properties>
         <jira.version>6.0</jira.version>
-        <amps.version>3.10.2</amps.version>
+        <amps.version>4.2.3</amps.version>
         <jira.data.version>6.0</jira.data.version>
         <upm.license.compatibility.version>2.3</upm.license.compatibility.version>
         <sal.api.version>2.4.0</sal.api.version>
