--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,7 @@
                     <productDataVersion>${jira.data.version}</productDataVersion>
                     <instructions>
                         <Private-Package>com.atlassian.upm.license.storage.lib*</Private-Package>
-                        <Import-Package>com.atlassian.upm.api.license.entity;version="2.0.1", com.atlassian.upm.api.license;version="2.0.1", com.atlassian.upm.api.util;version="2.0.1", com.atlassian.upm.license.storage.plugin;version="${upm.license.compatibility.version}", !twitter4j.internal.http.alternative,!dalvik.system,!com.google.appengine.api.urlfetch,org.slf4j;version="1.5",*;resolution:=optional</Import-Package>
+                        <Import-Package>com.atlassian.upm.api.license.entity;version="2.0.1", com.atlassian.upm.api.license;version="2.0.1", com.atlassian.upm.api.util;version="2.0.1", com.atlassian.upm.license.storage.plugin;version="${upm.license.compatibility.version}", twitter4j;version=3.0.3, !twitter4j.internal.http.alternative,!dalvik.system,!com.google.appengine.api.urlfetch,org.slf4j;version="1.5",*;resolution:=optional</Import-Package>
                     </instructions>
                     <pluginArtifacts>
                         <pluginArtifact>
