--- a/pom.xml
+++ b/pom.xml
@@ -248,7 +248,7 @@
     	<guava.version>18.0</guava.version>
 		<javax.servlet.version>2.5</javax.servlet.version>
         <jira.data.version>7.0.0-1</jira.data.version>
-		<jira.version>7.0.0-1</jira.version>
+		<jira.version>7.1.8</jira.version>
 		<sal.api.version>3.0.3</sal.api.version>
 		<upm.license.compatibility.version>2.8</upm.license.compatibility.version>
     </properties>
